# Boggle-Game

./: .clang-format  .gitignore  Board.cpp  Board.h  CMakeLists.txt  LICENSE.txt  Node.cpp  Node.h  README.md  Trie.cpp  Trie.h  VisitMap.cpp  boggle_algorithm.cpp  boggle_tester.h  main.cpp
.github/workflows/: ci.yml  code-quality.yml  release.yml
benchmark/: run_benchmark.bat  run_benchmark.sh  run_benchmark_mingw.bat
src/: Board.cpp  Trie.cpp  Trie.h  VisitMap.h  boggle_algorithm.h  create_boggle_board.h  main.cpp  word_list.h
src/algorithm/: VisitMap.cpp  VisitMap.h  boggle_algorithm.cpp  boggle_algorithm.h
src/board/: Board.cpp  Board.h  boggle_boards.h  create_boggle_board.h
src/trie/: Node.cpp  Node.h  Trie.cpp  Trie.h  word_list.h
src/verification/: boggle_tester.cpp  boggle_tester.h
tests/: test_boggle.cpp  test_boggle_benchmark.cpp  test_boggle_performance.cpp
